/*
 * Copyright 2020, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.entity;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.entity";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message TaskView {
    option (.entity).kind = PROJECTION;

    TaskViewId id = 1;

    string name = 2 [(column) = true];

    int32 estimate_in_days = 3 [(column) = true];

    Status status = 4 [(column) = true];

    google.protobuf.Timestamp due_date = 5 [(column) = true];

    enum Status {
        UNDEFINED = 0;
        CREATED = 1;
        STARTED = 2;
        DONE = 3;
        CANCELLED = 4;
    }
}

message TaskViewId {
    option (is).java_type = "io.spine.server.storage.given.IntIdentifier";
    int32 id = 1;
}

message TaskListView {
    option (.entity).kind = PROJECTION;

    TaskListViewId id = 1;

    repeated TaskViewId task_views = 2;

    string description = 3 [(column) = true];
}

message TaskListViewId {
    option (is).java_type = "io.spine.server.storage.given.IntIdentifier";
    int32 id = 1;
}
